# marknote

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  REUSE.toml  flatpak-kmime-version.patch  marknote.notifyrc  org.kde.marknote.desktop  org.kde.marknote.json  org.kde.marknote.metainfo.xml  plasma-runner-marknote.desktop  snapcraft.yaml
.reuse/: dep5
po/ar/: marknote.po
po/ast/: marknote.po
po/ca/: marknote.po
po/ca@valencia/: marknote.po
po/cs/: marknote.po
po/da/: marknote.po
po/de/: marknote.po
po/en_GB/: marknote.po
po/eo/: marknote.po
po/es/: marknote.po
po/eu/: marknote.po
po/fi/: marknote.po
po/fr/: marknote.po
po/ga/: marknote.po
po/gl/: marknote.po
po/he/: marknote.po
po/hi/: marknote.po
po/ia/: marknote.po
po/is/: marknote.po
po/it/: marknote.po
po/ja/: marknote.po
po/ka/: marknote.po
po/ko/: marknote.po
po/lt/: marknote.po
po/lv/: marknote.po
po/nl/: marknote.po
po/nn/: marknote.po
po/pa/: marknote.po
po/pl/: marknote.po
po/pt_BR/: marknote.po
po/ru/: marknote.po
po/sa/: marknote.po
po/sk/: marknote.po
po/sl/: marknote.po
po/sv/: marknote.po
po/tr/: marknote.po
po/ug/: marknote.po
po/uk/: marknote.po
po/zh_CN/: marknote.po
po/zh_TW/: marknote.po
src/: CMakeLists.txt  Messages.sh  actionsmodel.cpp  actionsmodel.h  application.cpp  application.h  asyncimageprovider.h  colorschemer.cpp  colorschemer.h  commandbarhelper.cpp  commandbarhelper.h  config.cpp  config.h  documenthandler.cpp  documenthandler.h  emojiermodel.cpp  emojiermodel.h  emojierproxymodel.cpp  emojierproxymodel.h  foreigntypes.h  latextopng.cpp  latextopng.h  maildirimport.cpp  maildirimport.h  main.cpp  marknotesettings.kcfg  marknotesettings.kcfgc  navigationcontroller.cpp  navigationcontroller.h  nestedlisthelper.cpp  nestedlisthelper_p.h  notebooksmodel.cpp  notebooksmodel.h  notesmodel.cpp  notesmodel.h  raw_documenthandler.cpp  raw_documenthandler.h  rich_documenthandler.cpp  rich_documenthandler.h  runner.cpp  (+12 more)
src/asyncdocbuilder/: asyncdocbuilder.cpp  asyncdocbuilder.h
src/autotests/: CMakeLists.txt  maildirimporttest.cpp  navigationcontrollertest.cpp  nestedlisthelpertest.cpp  notebooksmodeltest.cpp
src/autotests/testdata/maildir/new/: 1718440350841.R889.fedora
src/contents/ui/: AddNotebookDialog.qml  EditPage.qml  NavigationBar.qml  NotesPage.qml  WelcomePage.qml  main.qml  resources.qrc
src/contents/ui/components/: ActionButton.qml  BottomDrawer.qml  DoubleActionButton.qml
src/emojis/: emoji_shortnames.h  shortnames_bn.h  shortnames_da.h  shortnames_de.h  shortnames_en.h  shortnames_es.h  shortnames_et.h  shortnames_fi.h  shortnames_fr.h  shortnames_hi.h  shortnames_hu.h  shortnames_it.h  shortnames_ja.h  shortnames_ko.h  shortnames_lt.h  shortnames_ms.h  shortnames_nb.h  shortnames_nl.h  shortnames_pl.h  shortnames_pt.h  shortnames_ru.h  shortnames_sv.h  shortnames_th.h  shortnames_uk.h  shortnames_vi.h  shortnames_zh.h
src/emojis/tools/: update_emojis.py
src/mdoptions/: mdoptions.h
src/mdserializer/: mdserializer.cpp  mdserializer.h
src/mdtreemodel/: mddatagenerator.cpp  mddatagenerator.h  mdtreemodel.cpp  mdtreemodel.h  treeitem.cpp  treeitem.h
src/qml/: AddNotebookDialog.qml  BlockChooser.qml  BlockCode.qml  BlockEditorPage.qml  BlockHeading.qml  BlockHorizontalLine.qml  BlockList.qml  BlockListItem.qml  BlockParagraph.qml  BlockQuote.qml  BlockTable.qml  BlockTemplate.qml  BlockView.qml  ContextMenu.qml  EditPage.qml  FormIconDelegate.qml  GlobalMenuBar.qml  ImageDialog.qml  ImportMaildirDialog.qml  KActionFromAction.qml  KQuickCommandBarPage.qml  LinkDialog.qml  Main.qml  MainEditor.qml  NativeEditMenu.qml  NativeFileMenu.qml  NativeHelpMenu.qml  NativeMenuItemFromAction.qml  NativeWindowMenu.qml  NoteInlineStatusBar.qml  NoteLinkDialog.qml  NoteMetadataDialog.qml  NotebookContextMenu.qml  NotebookDelegate.qml  NotebookDeleteAction.qml  NotebookDeleteDialog.qml  NotebookMetadataDialog.qml  NotesPage.qml  RawEditPage.qml  RichEditPage.qml  (+6 more)
src/qml/components/: ActionButton.qml  DoubleActionButton.qml  EmojierPopup.qml  RadioSelector.qml  ToolbarBackground.qml
src/settings/: CMakeLists.txt  MarkNoteGeneralPage.qml  MarkNoteSettings.qml
tools/: update_emojis.py
